# toy-compiler

./: .zshrc  Cargo.toml
src/: main.rs
